adding modal and function to save portfolio

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -180,3 +180,7 @@ footer .glyphicon {
   background-image: url("../images/portfoli_2.jpg");
   background-attachment: fixed;
 }
+
+#myModal{
+  margin-top: 50px;
+}
